--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,49 @@ body {
     cursor: pointer;
     color: #f9f9f9;
 }
+
+::placeholder {
+    text-transform: capitalize;
+    position: absolute;
+}
+
+.link {
+    position: relative;
+    padding: .1rem;
+    color: #00b7ff;
+    z-index: 1;
+    transition: color .2s;
+    -webkit-transition: color .2s;
+    -moz-transition: color .2s;
+    -ms-transition: color .2s;
+    -o-transition: color .2s;
+    width: fit-content;
+    display: inline;
+}
+
+.link::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 92% 0 0 0;
+    background-color: #00b7ff;
+    transition: inset .2s;
+    -webkit-transition: inset .2s;
+    -moz-transition: inset .2s;
+    -ms-transition: inset .2s;
+    -o-transition: inset .2s;
+    border: none;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
+.link:hover {
+    color: #000;
+}
+
+.link:hover::after {
+    inset: 0 0 0 0;
+}
