feat: added companies section to the after login home page

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,8 @@ body {
     font-family: 'Avenir', sans-serif;
     color: #f9f9f9;
     background-image: url("../public/images/home-background.png");
-    background-size: 100% 100%;
+    background-size: 100% 500%;
+    background-repeat: no-repeat;
 }
 
 :any-link {
